...
        
        var title: String {
            switch self {
            case .profile:
                return "Профиль"
            case .catalog:
                return "Каталог"
            case .basket:
                return "Корзина"
            case .stats:
                return "Статистика"
            }
            
...
