...
        }
    }
    
    // MARK: - Setup
    private func setupTable() {
        view.addSubview(tableView)
        tableView.accessibilityIdentifier = "CatalogTable"
        NSLayoutConstraint.activate([
            tableView.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor),
            tableView.leadingAnchor.constraint(equalTo: view.leadingAnchor),
            tableView.trailingAnchor.constraint(equalTo: view.trailingAnchor),
            tableView.bottomAnchor.constraint(equalTo: view.bottomAnchor)
        ])
...
