...
        collectionView.register(
            NFTCollectionViewCell.self,
            forCellWithReuseIdentifier: NFTCollectionViewCell.defaultReuseIdentifier
        )
        collectionView.dataSource = self
        collectionView.delegate = self
        collectionView.accessibilityIdentifier = "NFTCollectionView"
        return collectionView
    }()
    
    private let categoryTitle: UILabel = {
        let label = UILabel()
        label.font = UIFont.systemFont(ofSize: 22, weight: .bold)
...
